--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,25 +1,27 @@
 <div class="courses-panel">
 
-  <h3>All Courses {{ counter()}}</h3>
+  <h3>All Courses</h3>
 
   <button class="btn">
     Add Course
-  </button>
-
-   <button class="btn" (click)="increment()">
-    Incrementing
   </button>
 
   <mat-tab-group>
 
     <mat-tab label="Beginners">
 
+      <courses-card-list [courses]="beginnerCourses()">
+      
+      </courses-card-list>
+
 
 
     </mat-tab>
 
     <mat-tab label="Advanced">
+      <courses-card-list [courses]="advancedCourses()">
 
+      </courses-card-list>
 
     </mat-tab>
 
