--- a/src/app/courses-card-list/courses-card-list.component.html
+++ b/src/app/courses-card-list/courses-card-list.component.html
@@ -10,7 +10,7 @@
         <div class="course-actions">
             <button class="btn">VIEW COURSE</button>
             <button class="btn">EDIT</button>
-            <img class="delete" src="/assets/icons/delete.swg">
+            <img class="delete" src="/assets/icons/delete.svg">
         </div>
     </div>
 }
